@@ -1,6 +1,6 @@
 .modal {
     display: none;
-    top: 20%;
+    top: 10%;
     margin: 0 0 0 -280px;
     overflow: hidden;
 }
